--- a/server.properties
+++ b/server.properties
@@ -24,10 +24,10 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=10
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=\u00a7fHello \u00a7bDragon\u00a7f and \u00a7dMystical Magic\u00a7f World!
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
