--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Jun 20 11:53:39 JST 2024
+#Thu Jun 20 14:46:42 JST 2024
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -27,7 +27,7 @@ max-chained-neighbor-updates=1000000
 max-players=10
 max-tick-time=60000
 max-world-size=29999984
-motd=\u00a7fHello \u00a7bDragon\u00a7f and \u00a7dMystical Magic\u00a7f World!
+motd=\u00A7fHello \u00A7bDragon\u00A7f and \u00A7dMystical Magic\u00A7f World\!
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
